# cutil

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
cutest/: CuTest.c  CuTest.h
inc/: CMemLeak.h  argparse.h  filestream.h  pack.h  sha256.h
projects/eclipse/cutil_test/: .cproject  .project
projects/eclipse/cutil_unit/: .cproject  .project
src/: CMemLeak.c  argparse.c  filestream.c  pack.c  sha256.c
test/: test_main.c  testsuite_argparse.c  testsuite_pack.c  testsuite_sha256.c  testsuite_soa_fsa.c
